# ChangeLog for sys-apps/fileschanged
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jun 2006; Alexandru Toma (analoguedragon) <flash3001@yahoo.com>
  ChangeLog:
  New ebuild for bug #81622
