@@ -1,4 +1,4 @@
 DIST fileschanged-0.6.5.tar.gz 270182 RMD160 43e7601af1f5ef7537865caaeadcadcb3733e156 SHA1 5ded8e9323e90122bd5dbb68fe3bd030c2ca109d SHA256 63c10995197bca6a7f24a19ca26870abafc919b23a870447cb44199d22f777cc
-EBUILD fileschanged-0.6.5.ebuild 591 RMD160 72a2c2b755a03ea7abb5505df329c2fb92d91698 SHA1 08eae814ce00da209977bcb8ea5bf896ff7307e0 SHA256 b9ae0cbb8061f7bf7fe70861f26c403e94c404524a9fe08b9214707342d9076c
-MISC ChangeLog 233 RMD160 24f9905b3da4d0784b3dd410dca25d1ac76f8e70 SHA1 83e5fe85fd7e2b597343c66d159f584411ca1c49 SHA256 b5efc95aaa28417c5f6529da485fefed830115ee6a9c8ebe63d5f2ee74efc624
+EBUILD fileschanged-0.6.5.ebuild 670 RMD160 5ba9a10d774167fd12c7a654b51280bec598839d SHA1 42d597a3bc43b99766590bfdd399d80a76bdaa41 SHA256 635896d3c8c096a53ef0a0c625064253c75ea7fa006f8b1b7e600b65671a190c
+MISC ChangeLog 380 RMD160 9e6263b81d3895397f869eb3c82d27ce2bb0650f SHA1 9b144b451dfda88aa03e9e6a667eb9703d9e9d76 SHA256 06428f846feed1379799d4b0a7fb32e7f64501b2249a2ed7b6689658a8eb5f14
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
