@@ -1,4 +1,4 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -12,14 +12,16 @@ KEYWORDS="~x86"
 IUSE="nls"
 
 DEPEND="virtual/fam"
+RDEPEND="${DEPEND}"
 
 src_compile() {
-	econf $(use_enable nls) || die "econf failed"
+	econf $(use_enable nls)
 	emake || die "emake failed"
 }
 
 src_install() {
 	emake DESTDIR="${D}" install || die "emake install failed"
-	dodoc ChangeLog README TODO
+	dodoc ChangeLog README TODO || die "dodoc failed"
+	# make install installs the doc files in wrong directory.
 	rm -rf "${D}"/usr/share/${PN}
 }
